force-app/main/default/objects/EC_PaymetricPaymentSetting__c/EC_PaymetricPaymentSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>EC Paymetric Payment Setting</label>
</CustomObject>