force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/Access_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Endpoint__c</fullName>
    <label>Access Token Endpoint</label>
    <type>Url</type>
</CustomField>