force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/Ajax_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Ajax_Endpoint__c</fullName>
    <label>Ajax Endpoint</label>
    <type>Url</type>
</CustomField>