force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>Tokenization Endpoint</label>
    <type>Url</type>
</CustomField>