force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/MerchantGUID__c.field-meta.xml
<CustomField>
    <fullName>MerchantGUID__c</fullName>
    <label>Merchant GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>