force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/Pre_Auth_Only__c.field-meta.xml
<CustomField>
    <fullName>Pre_Auth_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Auth Only</label>
    <type>Checkbox</type>
</CustomField>