force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/PreAuthAmount__c.field-meta.xml
<CustomField>
    <fullName>PreAuthAmount__c</fullName>
    <label>Pre Auth Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>