force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/RedirectURL__c.field-meta.xml
<CustomField>
    <fullName>RedirectURL__c</fullName>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>