force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/Response_Packet_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Response_Packet_Endpoint__c</fullName>
    <label>Response Packet Endpoint</label>
    <type>Url</type>
</CustomField>