force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/SharedKey__c.field-meta.xml
<CustomField>
    <fullName>SharedKey__c</fullName>
    <label>Shared Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>