force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/XiPayEndpoint__c.field-meta.xml
<CustomField>
    <fullName>XiPayEndpoint__c</fullName>
    <label>XiPay Endpoint</label>
    <type>Url</type>
</CustomField>