force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/XiPayMerchantID__c.field-meta.xml
<CustomField>
    <fullName>XiPayMerchantID__c</fullName>
    <label>XiPay Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>