force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/XiPayPassword__c.field-meta.xml
<CustomField>
    <fullName>XiPayPassword__c</fullName>
    <label>XiPay Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>