force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/XiPaySoapaction__c.field-meta.xml
<CustomField>
    <fullName>XiPaySoapaction__c</fullName>
    <label>XiPay Soapaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>