force-app/main/default/objects/EC_PaymetricPaymentSetting__c/fields/XiPayUsername__c.field-meta.xml
<CustomField>
    <fullName>XiPayUsername__c</fullName>
    <label>XiPay Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>